@@ -1,3 +1,7 @@
+2003-07-07  Mark McLoughlin  <mark@skynet.ie>
+
+	* single_module/tools/list_translators.sh: fix a couple of things.
+
 2003-06-18  Murray Cumming  <murrayc@usa.net>
 
 	* 2.x/: Started skeleton of 2.4 release notes, by ripping stuff out of
